@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
 import org.folio.calendar.domain.dto.ErrorCodeDTO;
@@ -158,7 +157,7 @@ public class CalendarValidationService {
       .getServicePoints()
       .stream()
       .map(ServicePointCalendarAssignment::getServicePointId)
-      .collect(Collectors.toList());
+      .toList();
     List<Calendar> overlaps = calendarRepository
       .findWithServicePointsAndDateRange(
         servicePointAssignmentList,
@@ -167,7 +166,7 @@ public class CalendarValidationService {
       )
       .stream()
       .filter(c -> !ignore.contains(c.getId()))
-      .collect(Collectors.toList());
+      .toList();
     if (!overlaps.isEmpty()) {
       return overlaps
         .stream()
@@ -202,13 +201,13 @@ public class CalendarValidationService {
                     .getServicePoints()
                     .stream()
                     .map(ServicePointCalendarAssignment::getServicePointId)
-                    .collect(Collectors.toList())::contains
+                    .toList()::contains
                 )
-                .collect(Collectors.toList())
+                .toList()
             )
           )
         )
-        .collect(Collectors.toList());
+        .toList();
     }
     return new ArrayList<>();
   }
@@ -241,14 +240,14 @@ public class CalendarValidationService {
           opening.getEndTime()
         )
       )
-      .collect(Collectors.toList());
+      .toList();
 
     return Optional.of(
       new InvalidDataException(
         ErrorCodeDTO.CALENDAR_INVALID_NORMAL_OPENINGS,
         new ExceptionParameters(
           Parameters.NORMAL_HOURS,
-          normalHours.stream().map(normalOpeningMapper::toDto).collect(Collectors.toList())
+          normalHours.stream().map(normalOpeningMapper::toDto).toList()
         ),
         translationService.format(
           TranslationKey.ERROR_CALENDAR_INVALID_NORMAL_OPENINGS,
@@ -276,7 +275,7 @@ public class CalendarValidationService {
           ErrorCodeDTO.CALENDAR_INVALID_EXCEPTION_NAME,
           new ExceptionParameters(
             Parameters.EXCEPTIONS,
-            ranges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+            ranges.stream().map(exceptionRangeMapper::toDto).toList()
           ),
           translationService.format(TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_NAME)
         )
@@ -300,7 +299,7 @@ public class CalendarValidationService {
     List<ExceptionRange> failed = ranges
       .stream()
       .filter(range -> range.getStartDate().isAfter(range.getEndDate()))
-      .collect(Collectors.toList());
+      .toList();
     if (!failed.isEmpty()) {
       return Optional.of(
         failed
@@ -310,7 +309,7 @@ public class CalendarValidationService {
               ErrorCodeDTO.CALENDAR_INVALID_EXCEPTION_DATE_ORDER,
               new ExceptionParameters(
                 Parameters.EXCEPTIONS,
-                ranges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+                ranges.stream().map(exceptionRangeMapper::toDto).toList()
               ),
               translationService.format(
                 TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_DATE_ORDER,
@@ -324,7 +323,7 @@ public class CalendarValidationService {
               new ExceptionRangeSingleErrorData(range)
             )
           )
-          .collect(Collectors.toList())
+          .toList()
       );
     }
     return Optional.empty();
@@ -352,7 +351,7 @@ public class CalendarValidationService {
           calendar.getEndDate()
         )
       )
-      .collect(Collectors.toList());
+      .toList();
     if (!failed.isEmpty()) {
       return Optional.of(
         failed
@@ -362,7 +361,7 @@ public class CalendarValidationService {
               ErrorCodeDTO.CALENDAR_INVALID_EXCEPTION_DATE_BOUNDARY,
               new ExceptionParameters(
                 Parameters.EXCEPTIONS,
-                ranges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+                ranges.stream().map(exceptionRangeMapper::toDto).toList()
               ),
               translationService.format(
                 TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_DATE_OUT_OF_BOUNDS,
@@ -380,7 +379,7 @@ public class CalendarValidationService {
               new ExceptionRangeSingleErrorData(range)
             )
           )
-          .collect(Collectors.toList())
+          .toList()
       );
     }
     return Optional.empty();
@@ -406,14 +405,14 @@ public class CalendarValidationService {
       .stream()
       .map(ExceptionRangeUtils::getTranslation)
       .map(f -> f.apply(translationService))
-      .collect(Collectors.toList());
+      .toList();
 
     return Optional.of(
       new InvalidDataException(
         ErrorCodeDTO.CALENDAR_INVALID_EXCEPTIONS,
         new ExceptionParameters(
           Parameters.EXCEPTIONS,
-          exceptionRanges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+          exceptionRanges.stream().map(exceptionRangeMapper::toDto).toList()
         ),
         translationService.format(
           TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_RANGES,
@@ -449,14 +448,14 @@ public class CalendarValidationService {
               range.getEndDate()
             )
           )
-          .collect(Collectors.toList());
+          .toList();
         if (!failures.isEmpty()) {
           return Optional.of(
             new InvalidDataException(
               ErrorCodeDTO.CALENDAR_INVALID_EXCEPTION_OPENING_BOUNDARY,
               new ExceptionParameters(
                 Parameters.EXCEPTIONS,
-                ranges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+                ranges.stream().map(exceptionRangeMapper::toDto).toList()
               ),
               translationService.format(
                 TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_HOUR_OUT_OF_BOUNDS,
@@ -481,7 +480,7 @@ public class CalendarValidationService {
                         hour.getEndTime()
                       )
                     )
-                    .collect(Collectors.toList())
+                    .toList()
                 )
               )
             )
@@ -489,7 +488,7 @@ public class CalendarValidationService {
         }
         return Optional.empty();
       });
-    return stream.filter(Optional::isPresent).map(Optional::get).collect(Collectors.toList());
+    return stream.filter(Optional::isPresent).map(Optional::get).toList();
   }
 
   /**
@@ -516,7 +515,7 @@ public class CalendarValidationService {
               ErrorCodeDTO.CALENDAR_INVALID_EXCEPTION_OPENINGS,
               new ExceptionParameters(
                 Parameters.EXCEPTIONS,
-                ranges.stream().map(exceptionRangeMapper::toDto).collect(Collectors.toList())
+                ranges.stream().map(exceptionRangeMapper::toDto).toList()
               ),
               translationService.format(
                 TranslationKey.ERROR_CALENDAR_INVALID_EXCEPTION_OPENINGS,
@@ -540,7 +539,7 @@ public class CalendarValidationService {
                         hour.getEndTime()
                       )
                     )
-                    .collect(Collectors.toList())
+                    .toList()
                 )
               )
             )
@@ -548,7 +547,7 @@ public class CalendarValidationService {
         }
         return Optional.empty();
       });
-    return stream.filter(Optional::isPresent).map(Optional::get).collect(Collectors.toList());
+    return stream.filter(Optional::isPresent).map(Optional::get).toList();
   }
 
   public void validate(Calendar calendar) {
