@@ -28,7 +28,7 @@ public class ExceptionRangeUtils {
    * return at least two overlapping openings.
    */
   public static Optional<Set<ExceptionHour>> getHourOverlaps(Collection<ExceptionHour> openings) {
-    return TemporalUtils.getOverlaps(toTemporalRanges(openings).collect(Collectors.toList()));
+    return TemporalUtils.getOverlaps(toTemporalRanges(openings).toList());
   }
 
   /**
@@ -68,7 +68,7 @@ public class ExceptionRangeUtils {
             range.getEndDate()
           )
         )
-        .collect(Collectors.toList())
+        .toList()
     );
   }
 
