@@ -202,7 +202,7 @@ class SearchCalendarTest extends BaseCalendarApiTest {
         response.then().statusCode(is(HttpStatus.CREATED.value()));
         return response.getBody().as(CalendarDTO.class);
       })
-      .collect(Collectors.toList());
+      .toList();
 
     Response searchResponseUnlimited = sendCalendarSearchRequest(
       SearchRequestParameters.builder().limit(Integer.MAX_VALUE).build()
