@@ -38,11 +38,7 @@ class NormalMigrationTest extends AbstractMigrationTest {
     collection.getCalendars().forEach(c -> c.setId(UUIDs.UUID_A));
     assertThat(
       "The regular period was properly converted",
-      collection
-        .getCalendars()
-        .stream()
-        .map(CalendarDTO::getNormalHours)
-        .collect(Collectors.toList()),
+      collection.getCalendars().stream().map(CalendarDTO::getNormalHours).toList(),
       hasItem(
         containsInAnyOrder(
           calendarMapper.toDto(Calendars.CALENDAR_FULL_EXAMPLE_F).getNormalHours().toArray()
