@@ -45,11 +45,11 @@ class ClearIdsTest {
     cal.clearIds();
     assertThat(cal.getId(), is(nullValue()));
     assertThat(
-      cal.getNormalHours().stream().map(NormalOpening::getId).collect(Collectors.toList()),
+      cal.getNormalHours().stream().map(NormalOpening::getId).toList(),
       everyItem(is(nullValue()))
     );
     assertThat(
-      cal.getExceptions().stream().map(ExceptionRange::getId).collect(Collectors.toList()),
+      cal.getExceptions().stream().map(ExceptionRange::getId).toList(),
       everyItem(is(nullValue()))
     );
     assertThat(
@@ -59,7 +59,7 @@ class ClearIdsTest {
         .map(ExceptionRange::getOpenings)
         .flatMap(Set::stream)
         .map(ExceptionHour::getId)
-        .collect(Collectors.toList()),
+        .toList(),
       everyItem(is(nullValue()))
     );
   }
